globus-gram-job-manager (14.31-1+gt6.@distro@) @distro@; urgency=low

  * Set test case cache dir

 -- Globus Toolkit <support@globus.org>  Tue, 30 Aug 2016 15:57:57 -0400

globus-gram-job-manager (14.30-1+gt6.@distro@) @distro@; urgency=low

  * Fix test problem in el5 mock with HOME=/builddir and root user

 -- Globus Toolkit <support@globus.org>  Fri, 19 Aug 2016 17:06:40 -0400

globus-gram-job-manager (14.29-1+gt6.@distro@) @distro@; urgency=low

  * Makefile fix

 -- Globus Toolkit <support@globus.org>  Thu, 18 Aug 2016 16:08:45 -0400

globus-gram-job-manager (14.28-1+gt6.@distro@) @distro@; urgency=low

  * Updates for OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 15:43:01 -0400

globus-gram-job-manager (14.27-2+gt6.@distro@) @distro@; urgency=low

  * Update XIO Driver package names

 -- Globus Toolkit <support@globus.org>  Tue, 15 Dec 2015 10:41:16 -0500

globus-gram-job-manager (14.27-1+gt6.@distro@) @distro@; urgency=low

  * GT-619: Uninitialized data in job manager cause crash

 -- Globus Toolkit <support@globus.org>  Tue, 28 Jul 2015 10:01:41 -0400

globus-gram-job-manager (14.26-1+gt6.@distro@) @distro@; urgency=low

  * Convert manpage source to asciidoc
  * Fix GT-590: GT5 shows running jobs as being in pending state

 -- Globus Toolkit <support@globus.org>  Thu, 18 Jun 2015 16:00:58 -0400

globus-gram-job-manager (14.25-2+gt6.@distro@) @distro@; urgency=low

  * Test fixes for jessie pbuilder

 -- Globus Toolkit <support@globus.org>  Thu, 16 Apr 2015 14:39:04 -0400

globus-gram-job-manager (14.25-1+gt6.@distro@) @distro@; urgency=low

  * don't use $HOME in tests

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 14:26:32 -0500

globus-gram-job-manager (14.24-1+gt6.@distro@) @distro@; urgency=low

  * globus-personal-gatekeeper cleanups

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 14:01:19 -0500

globus-gram-job-manager (14.23-1+gt6.@distro@) @distro@; urgency=low

  * doxygen fixes
